# provisioning

./: .gitignore  000_parameters.sh  010_globals.sh  020_create_ssh_keys.sh  100_infra_variables.sh  110_infra_create_resource_group.sh  120_infra_create_vnet.sh  130_infra_create_subnets.sh  140_infra_upload_ssh_key.sh  150_infra_create_keyvault.sh  199_infra_cleanup.sh  200_archive_variables.sh  210_archive_create_resource_group.sh  220_archive_create_storage_account.sh  299_archive_cleanup.sh  300_control_variables.sh  310_control_create_resource_group.sh  320_control_create_vm.sh  321_control_cloud-init.sh  399_control_cleanup.sh  400_compute_variables.sh  410_compute_create_resource_group.sh  430_compute_create_ppg.sh  440_compute_create_vmss.sh  441_cloud-init.sh  441_compute_cloud-init.sh  499_compute_cleanup.sh  Questions.md  parse_metadata.sh  playbook.yml  pyproject.toml  run_timestamp.sh  setup_conda.sh  setup_ssh.sh  utils.sh
azcli/: 010_globals.sh  020_create_ssh_keys.sh  100_infra_variables.sh  110_infra_create_resource_group.sh  120_infra_create_vnet.sh  130_infra_create_subnets.sh  140_infra_upload_ssh_key.sh  150_infra_create_keyvault.sh  199_infra_cleanup.sh  200_archive_variables.sh  210_archive_create_resource_group.sh  220_archive_create_storage_account.sh  299_archive_cleanup.sh  300_compute_variables.sh  310_compute_create_resource_group.sh  330_compute_create_ppg.sh  340_compute_create_vmss.sh  341_compute_cloud-init.sh  399_compute_cleanup.sh  400_control_variables.sh  410_control_create_resource_group.sh  420_control_create_vm.sh  (+2 more)
(+60 files in other folders)
